@@ -1,3 +1,6 @@
+14 Sep 2006 mipsator
+ * fixed CPUID checking for X86 32 bits CPUs, noticed by Leslie Polzer.
+
 05 Sep 2006 mipsator
  * updated values for compiler detection in SETTINGS to sync with pmk.
 
